version=12.1.51_dev
# TODO: JVXL for point-based data slabbing
# TODO: FULL option (currently defaults to PLANE
# new feature: CONTACT command (Erik Wyatt/Bob Hanson 6/22/2011)
#  -- creates an object of a variety of forms that
#     indicates nonbonding interactions
#  -- can be a planar disk perpendicular to the interaction,
#     or a cigar-shaped connector
#  -- HBOND (just between O and/or N)
#  -- HYDROPHOBIC (not between O and/or N)
#  -- percent of van der Waals distance
#
#  -- works by doing a sum or difference of two complementary
#     van der Waals surfaces (PLANAR) or by showing the 
#     intersection of the two surfaces (FULL) or by doing an NCI
#     (noncovalent interaction) PROMOLECULAR calculation. 
#
#  -- DENSITY x.x (spot size) option does rough volume rendering.
#       
#
#  contact 
#
#  -- parameters
#
#  required:
#          {setA}
#  optional:
#          ID aaaa (if present, must be the very FIRST parameter
#          ON/OFF/DELETE/LIST (if present must be the only parameter other than ID
#          {setB} 
#          DENSITY x.x
#          COLOR DENSITY
#          IGNORE {ignoreSet} 
#          DISTANCE x.x
#          PARAMETERS [....] 
#          FULL|PLANAR|CONNECT|NCI (FULL not implemented yet)
#          HYDROPHOBIC|HBOND
#          INTRAMOLECULAR|INTERMOLECULAR
#          nnn%
#          COLOR ...
#          TRANSLUCENT/OPAQUE/MESH/NOMESH, etc...  (must be last parameters)
#
# new feature: show LIGHTING




Former-commit-id: 8c814d4827b7739e9ec9f18254f49f43f4f1def8